[gd_scene load_steps=4 format=2]

[ext_resource path="res://ARPG/HUD RPG.gd" type="Script" id=1]
[ext_resource path="res://assets/polices/CaveStory40.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/images/HUD/coeur final plus petits.png" type="Texture" id=3]

[node name="HUD RPG" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = 4.0
margin_top = 6.0
margin_right = 249.0
margin_bottom = 111.0

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_top = -3.0
margin_right = 269.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0509804, 0.0313726, 0.0313726, 0.317647 )

[node name="VUDHContainer" type="VBoxContainer" parent="Control"]
margin_right = 708.0
margin_bottom = 98.0

[node name="AmmoLeft" type="Label" parent="Control/VUDHContainer"]
margin_right = 708.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 2 )
text = "XX ammo left"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VUDHContainer"]
margin_top = 29.0
margin_right = 708.0
margin_bottom = 69.0

[node name="Heart1" type="TextureRect" parent="Control/VUDHContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="Heart2" type="TextureRect" parent="Control/VUDHContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="Heart3" type="TextureRect" parent="Control/VUDHContainer/HBoxContainer"]
margin_left = 88.0
margin_right = 128.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="Heart4" type="TextureRect" parent="Control/VUDHContainer/HBoxContainer"]
visible = false
margin_left = 132.0
margin_right = 172.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="Heart5" type="TextureRect" parent="Control/VUDHContainer/HBoxContainer"]
visible = false
margin_left = 132.0
margin_right = 172.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="EnnemiesLeft" type="Label" parent="Control/VUDHContainer"]
margin_top = 73.0
margin_right = 708.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 2 )
text = "XX ennemies left"
